# weatherkit-python

./: .gitignore  LICENSE  README.md  example.py  setup.cfg  setup.py
docs/: api.md
src/weatherkit/: __init__.py  models.py  weatherkit.py
src/weatherkit/tests/: sample_data.json  tests.py
