[metadata]
name = weatherkit-python
version = 1.0.1
url = https://github.com/greencoder/weatherkit-python
author = Scott Newman
author_email = snewman18@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
requires-dist =
    jsonpickle>=1.4.3
    cryptography>=38.0
    pyjwt>=2.6.0
    requests>=2.28.1

[options]
package_dir =
    = src
python_requires = >=3.6

[options.packages.find]
where = src
